--- a/content/webfonts/fontello/config.json
+++ b/content/webfonts/fontello/config.json
@@ -465,6 +465,12 @@
       "src": "entypo"
     },
     {
+      "uid": "c709da589c923ba3c2ad48d9fc563e93",
+      "css": "cancel-1",
+      "code": 59436,
+      "src": "entypo"
+    },
+    {
       "uid": "348b04ea17f646fbc6a46e20ebe4fe12",
       "css": "download",
       "code": 59392,
